--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
